# app_tro_ly

./: .gitattributes  .gitignore  AGENTS.md  README.md  Tái cấu trúc dự án.docx  lessons.md  package.json  tai_cau_truc.md  tai_cau_truc_tach_logic.md  tao_lai_agent.md  them_tinh_moi.md
%TEMP%/codex-mesh-tool-check/: azure-sakura-kimono-0326010047-export-handoff.json  azure-sakura-kimono-0326010047-refinement-plan.json  (+2 more)
.agent/: agent-platform-install-state.json
.codex/: AGENTS.md  config.toml
ai-dev-system/: AGENTS.md  README.md  bootstrap_control_plane.py  capabilities_utf8.json  requirements.txt  run_demo.py  verify_blender_connection.py  verify_connection.py  verify_unity_integration.py
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/capabilities/: default.json
apps/desktop-shell/src-tauri/src/: backend.rs  lib.rs  persistence.rs  unity_bridge.rs  unity_runtime.rs
bleder/: Meshy_AI_body_kokomi_0314010618_generate.fbx  test.blend
chua_mo_hinh/: README.md
docs/: 00-context.md  01-scope.md  02-architecture.md  03-api.md  04-ui.md  05-test-plan.md  06-decisions.md  07-ai-runtime.md  08-architecture-as-is.md  09-runbook.md  avatar-rig-cleanup.md  avatar-spec.md  index.md  roadmap.md
local-backend/: requirements.txt
scripts/: assistant_common.ps1  package_release.ps1  phase2-setup-tauri.ps1  prepare_desktop_bundle_resources.py  run_all.ps1  setup_windows.ps1  validate_desktop_bundle.py  validate_desktop_execution_surface.py
tasks/: ai-dev-system-unification-backlog.md  avatar-system-tasks.md  done.md  module-migration-backlog.md  p02-manual-checklist.md  rebuild-master-plan.md  task-people.md  task-queue.md  task-template.md
tools/: blender_add_facial_blendshapes.py  blender_asset_audit.py  blender_audit_avatar.py  blender_clean_avatar_rig.py  blender_fit_dress_scene.py  blender_fit_dress_shrinkwrap_transfer.py  blender_render_arm_variants.py  blender_render_asset_front.py  blender_scene_state_report.py  blender_split_body_regions.py  blender_validate_split_avatar.py  blender_verify_dress_scene.py
(+716 files in other folders)
