[package]
name = "desktop-shell"
version = "0.1.0"
description = "App Trợ Lý — Desktop Shell"
authors = ["App Tro Ly Team"]
edition = "2021"

[package.metadata.bundle]
name = "App Trợ Lý"
identifier = "com.apptroly.desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.24"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
strip = true
